syntax = "proto3";
package pb;

import "google/protobuf/empty.proto";

option go_package = "internal/infra/grpc/pb";

// protoc --go_out=. --go-grpc_out=. protofiles/order.proto

message CreateOrderRequest {
  string id = 1;
  float price = 2;
  float tax = 3;
}

message CreateOrderResponse {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
}

message Order {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
}

message Orders { repeated Order orders = 1; }

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrders(google.protobuf.Empty) returns (Orders);
}